added images, added steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-
-    <footer><a href="../index.html">Back</a></footer>
+    <img src="../img/lasagna.jpg" width="200" height="200" alt="">
+    <ol>
+        <li>step 1</li>
+        <li>step 2</li>
+        <li>step 3</li>
+    </ol>
+    <a href="../index.html">Back</a>
 </body>
 </html>
