--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <h1>Spaghetti</h1>
+    <img src="../img/spaghetti.jpg" width="200" height="200" alt="">
 
-    <footer><a href="../index.html">Back</a></footer>
+    <ol>
+        <li>step 1</li>
+        <li>step 2</li>
+        <li>step 3</li>
+    </ol>
+    <a href="../index.html">Back</a>
 </body>
 </html>
